deployments/flask-app.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: flask-app
  name: flask-app
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: flask-app
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: flask-app
    spec:
      containers:
      - image: saddique164/flask:v1
        name: flask
        ports:
        - containerPort: 5000
