deployments/ingress-flask.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-flask
  namespace: apps
spec:
  ingressClassName: nginx
  defaultBackend:
    service:
        name: flask-app-svc
        port: 
            number: 5000
